doxygen docs generated

--- a/docs/latex/_application_8hpp_source.tex
+++ b/docs/latex/_application_8hpp_source.tex
@@ -24,35 +24,36 @@
 \DoxyCodeLine{20 \textcolor{preprocessor}{\#include "{}MenuPage.hpp"{}}}
 \DoxyCodeLine{21 \textcolor{preprocessor}{\#include "{}OrderListPage.hpp"{}}}
 \DoxyCodeLine{22 \textcolor{preprocessor}{\#include "{}SalesPage.hpp"{}}}
-\DoxyCodeLine{23 \textcolor{preprocessor}{\#include "{}CartPage.hpp"{}}}
-\DoxyCodeLine{24 \textcolor{preprocessor}{\#include "{}LoginPage.hpp"{}}}
-\DoxyCodeLine{25 \textcolor{preprocessor}{\#include "{}CreateAdminPage.hpp"{}}}
-\DoxyCodeLine{26 }
-\DoxyCodeLine{27 \textcolor{keyword}{class }\mbox{\hyperlink{class_authenticator}{Authenticator}};}
-\DoxyCodeLine{28 }
-\DoxyCodeLine{29 \textcolor{keyword}{class }\mbox{\hyperlink{class_navbar_widget}{NavbarWidget}};}
-\DoxyCodeLine{30 }
-\DoxyCodeLine{37 \textcolor{keyword}{class }\mbox{\hyperlink{class_application}{Application}} : \textcolor{keyword}{public} Wt::WApplication}
-\DoxyCodeLine{38 \{}
-\DoxyCodeLine{39 \textcolor{keyword}{public}:}
-\DoxyCodeLine{43     \mbox{\hyperlink{class_application}{Application}}(\textcolor{keyword}{const} Wt::WEnvironment \&env);}
-\DoxyCodeLine{44 }
-\DoxyCodeLine{48     \mbox{\hyperlink{class_application_a748bca84fefb9c12661cfaa2f623748d}{\string~Application}}();}
-\DoxyCodeLine{49 }
-\DoxyCodeLine{55     \textcolor{keywordtype}{void} \mbox{\hyperlink{class_application_aa0444cdf3c0c3edc290fdb4c75fe2202}{handleInternalPath}}(\textcolor{keyword}{const} std::string \&internalPath);}
-\DoxyCodeLine{56     }
-\DoxyCodeLine{62     \mbox{\hyperlink{class_authenticator}{Authenticator}} * \mbox{\hyperlink{class_application_a5dd5d754692ce4d89ef6f8ba28d081aa}{getAuth}}();}
-\DoxyCodeLine{63     }
-\DoxyCodeLine{69     \textcolor{keywordtype}{void} \mbox{\hyperlink{class_application_a64cf04bb716e294a675fd2f87ec1c7d8}{reset}}();}
-\DoxyCodeLine{70     }
-\DoxyCodeLine{71 \textcolor{keyword}{private}:}
-\DoxyCodeLine{75     \mbox{\hyperlink{class_authenticator}{Authenticator}} *\mbox{\hyperlink{class_application_ab9a6f383295f51c8b70d1b5b002d043b}{auth}};}
-\DoxyCodeLine{76     }
-\DoxyCodeLine{78     \mbox{\hyperlink{class_navbar_widget}{NavbarWidget}} *\mbox{\hyperlink{class_application_ae13ee8d0f12871864d9481a909214159}{navbar}};}
-\DoxyCodeLine{79 }
-\DoxyCodeLine{81     Wt::WWidget *\mbox{\hyperlink{class_application_affad32f749f259158cd4d1d1531bd004}{body}};}
-\DoxyCodeLine{82 \};}
-\DoxyCodeLine{83 }
-\DoxyCodeLine{84 \textcolor{preprocessor}{\#endif}}
+\DoxyCodeLine{23 \textcolor{preprocessor}{\#include "{}InventoryPage.hpp"{}}}
+\DoxyCodeLine{24 \textcolor{preprocessor}{\#include "{}CartPage.hpp"{}}}
+\DoxyCodeLine{25 \textcolor{preprocessor}{\#include "{}LoginPage.hpp"{}}}
+\DoxyCodeLine{26 \textcolor{preprocessor}{\#include "{}CreateAdminPage.hpp"{}}}
+\DoxyCodeLine{27 }
+\DoxyCodeLine{28 \textcolor{keyword}{class }\mbox{\hyperlink{class_authenticator}{Authenticator}};}
+\DoxyCodeLine{29 }
+\DoxyCodeLine{30 \textcolor{keyword}{class }\mbox{\hyperlink{class_navbar_widget}{NavbarWidget}};}
+\DoxyCodeLine{31 }
+\DoxyCodeLine{38 \textcolor{keyword}{class }\mbox{\hyperlink{class_application}{Application}} : \textcolor{keyword}{public} Wt::WApplication}
+\DoxyCodeLine{39 \{}
+\DoxyCodeLine{40 \textcolor{keyword}{public}:}
+\DoxyCodeLine{44     \mbox{\hyperlink{class_application}{Application}}(\textcolor{keyword}{const} Wt::WEnvironment \&env);}
+\DoxyCodeLine{45 }
+\DoxyCodeLine{49     \mbox{\hyperlink{class_application_a748bca84fefb9c12661cfaa2f623748d}{\string~Application}}();}
+\DoxyCodeLine{50 }
+\DoxyCodeLine{56     \textcolor{keywordtype}{void} \mbox{\hyperlink{class_application_aa0444cdf3c0c3edc290fdb4c75fe2202}{handleInternalPath}}(\textcolor{keyword}{const} std::string \&internalPath);}
+\DoxyCodeLine{57     }
+\DoxyCodeLine{63     \mbox{\hyperlink{class_authenticator}{Authenticator}} * \mbox{\hyperlink{class_application_a5dd5d754692ce4d89ef6f8ba28d081aa}{getAuth}}();}
+\DoxyCodeLine{64     }
+\DoxyCodeLine{70     \textcolor{keywordtype}{void} \mbox{\hyperlink{class_application_a64cf04bb716e294a675fd2f87ec1c7d8}{reset}}();}
+\DoxyCodeLine{71     }
+\DoxyCodeLine{72 \textcolor{keyword}{private}:}
+\DoxyCodeLine{76     \mbox{\hyperlink{class_authenticator}{Authenticator}} *\mbox{\hyperlink{class_application_ab9a6f383295f51c8b70d1b5b002d043b}{auth}};}
+\DoxyCodeLine{77     }
+\DoxyCodeLine{79     \mbox{\hyperlink{class_navbar_widget}{NavbarWidget}} *\mbox{\hyperlink{class_application_ae13ee8d0f12871864d9481a909214159}{navbar}};}
+\DoxyCodeLine{80 }
+\DoxyCodeLine{82     Wt::WWidget *\mbox{\hyperlink{class_application_affad32f749f259158cd4d1d1531bd004}{body}};}
+\DoxyCodeLine{83 \};}
+\DoxyCodeLine{84 }
+\DoxyCodeLine{85 \textcolor{preprocessor}{\#endif}}
 
 \end{DoxyCode}
