--- a/docs/latex/_cart_widget_8hpp_source.tex
+++ b/docs/latex/_cart_widget_8hpp_source.tex
@@ -33,40 +33,40 @@
 \DoxyCodeLine{56 }
 \DoxyCodeLine{61     \mbox{\hyperlink{class_cart_widget_a38211cb0ff9ed8da8aaad0a42ed4d83a}{\string~CartWidget}}();}
 \DoxyCodeLine{62 }
-\DoxyCodeLine{63     \textcolor{keywordtype}{int} getQuantity();}
-\DoxyCodeLine{64     \textcolor{keywordtype}{double} getTotal();}
-\DoxyCodeLine{65     \textcolor{keywordtype}{double} getPrice();}
-\DoxyCodeLine{66 }
-\DoxyCodeLine{67    \textcolor{keyword}{private}:}
-\DoxyCodeLine{68     \textcolor{keywordtype}{int} iquantity;}
-\DoxyCodeLine{69     \textcolor{keywordtype}{double} dtotal;}
-\DoxyCodeLine{70     \textcolor{keywordtype}{double} dprice;}
-\DoxyCodeLine{71     Wt::WText *name\_;}
-\DoxyCodeLine{72     Wt::WText *price\_;}
-\DoxyCodeLine{73     Wt::WText *quantity\_;}
-\DoxyCodeLine{74     Wt::WPushButton *removeButton\_;}
-\DoxyCodeLine{75     Wt::WPushButton *addButton\_;}
-\DoxyCodeLine{76     Wt::WPushButton *subtractButton\_;}
-\DoxyCodeLine{77     Wt::WText *total\_;}
-\DoxyCodeLine{78 \};}
-\DoxyCodeLine{79 }
-\DoxyCodeLine{80 \textcolor{keyword}{class }\mbox{\hyperlink{class_cart_total}{CartTotal}} : \textcolor{keyword}{public} Wt::WTemplate \{}
-\DoxyCodeLine{81    \textcolor{keyword}{public}:}
-\DoxyCodeLine{82     \mbox{\hyperlink{class_cart_total}{CartTotal}}(\textcolor{keywordtype}{double});}
-\DoxyCodeLine{83     \textcolor{keywordtype}{void} addToTotal(\textcolor{keywordtype}{double});}
-\DoxyCodeLine{84     \textcolor{keywordtype}{void} subFromTotal(\textcolor{keywordtype}{double});}
-\DoxyCodeLine{85     std::string getName();}
-\DoxyCodeLine{86     Wt::WPushButton *getCheckoutPtr();}
-\DoxyCodeLine{87     \mbox{\hyperlink{class_cart_total}{\string~CartTotal}}();}
-\DoxyCodeLine{88 }
-\DoxyCodeLine{89    \textcolor{keyword}{private}:}
-\DoxyCodeLine{90     \textcolor{keywordtype}{void} updateTotal();}
-\DoxyCodeLine{91     \textcolor{keywordtype}{double} dtotal;}
-\DoxyCodeLine{92     Wt::WText *total\_;}
-\DoxyCodeLine{93     Wt::WLineEdit *nameEdit\_;}
-\DoxyCodeLine{94     Wt::WPushButton *checkoutButton\_;}
-\DoxyCodeLine{95 \};}
-\DoxyCodeLine{96 }
-\DoxyCodeLine{97 \textcolor{preprocessor}{\#endif}}
+\DoxyCodeLine{68     \textcolor{keywordtype}{int} \mbox{\hyperlink{class_cart_widget_ac14f95c1237caf9ae1bf96be3e5af14e}{getQuantity}}();}
+\DoxyCodeLine{74     \textcolor{keywordtype}{double} \mbox{\hyperlink{class_cart_widget_ac537b00b7a0e1a92bdaab3ec784e17e6}{getTotal}}();}
+\DoxyCodeLine{80     \textcolor{keywordtype}{double} \mbox{\hyperlink{class_cart_widget_a4f261efd2e94df7db9baea1a77ca1f71}{getPrice}}();}
+\DoxyCodeLine{81 }
+\DoxyCodeLine{82    \textcolor{keyword}{private}:}
+\DoxyCodeLine{87     \textcolor{keywordtype}{int} \mbox{\hyperlink{class_cart_widget_abdd093b5f9e340a40dd7db8ed3f355ce}{iquantity}};}
+\DoxyCodeLine{92     \textcolor{keywordtype}{double} \mbox{\hyperlink{class_cart_widget_ae4692a9e4b467c231a8387425654fea2}{dtotal}};}
+\DoxyCodeLine{97     \textcolor{keywordtype}{double} \mbox{\hyperlink{class_cart_widget_a48a823fa5183eb9ee7ad0d79d43c2fa7}{dprice}};}
+\DoxyCodeLine{102     Wt::WText *\mbox{\hyperlink{class_cart_widget_ac301161469d87284a556fe89fe8ff5f1}{name\_}};}
+\DoxyCodeLine{107     Wt::WText *\mbox{\hyperlink{class_cart_widget_a8a347b52067c0f3a37eae4cb275c58a0}{price\_}};}
+\DoxyCodeLine{112     Wt::WText *\mbox{\hyperlink{class_cart_widget_af0c983f543869805b5799ebb9489a17a}{quantity\_}};}
+\DoxyCodeLine{117     Wt::WPushButton *\mbox{\hyperlink{class_cart_widget_acce3689aaff150d85edaf72620e287e9}{removeButton\_}};}
+\DoxyCodeLine{122     Wt::WPushButton *\mbox{\hyperlink{class_cart_widget_a4846fd54fe8cf3d365c0f6546be92c4e}{addButton\_}};}
+\DoxyCodeLine{127     Wt::WPushButton *\mbox{\hyperlink{class_cart_widget_a501e136b16126fd64ee48f286c4e53d2}{subtractButton\_}};}
+\DoxyCodeLine{132     Wt::WText *\mbox{\hyperlink{class_cart_widget_aa01f3143a70b936e41a58e1d8757b958}{total\_}};}
+\DoxyCodeLine{133 \};}
+\DoxyCodeLine{134 }
+\DoxyCodeLine{135 \textcolor{keyword}{class }\mbox{\hyperlink{class_cart_total}{CartTotal}} : \textcolor{keyword}{public} Wt::WTemplate \{}
+\DoxyCodeLine{136    \textcolor{keyword}{public}:}
+\DoxyCodeLine{141     \mbox{\hyperlink{class_cart_total}{CartTotal}}(\textcolor{keywordtype}{double});}
+\DoxyCodeLine{146     \textcolor{keywordtype}{void} \mbox{\hyperlink{class_cart_total_a4ba425068bef8fadf137d1032bf23b7b}{addToTotal}}(\textcolor{keywordtype}{double});}
+\DoxyCodeLine{151     \textcolor{keywordtype}{void} \mbox{\hyperlink{class_cart_total_a521d807766114e743a749f6ce3e9b29e}{subFromTotal}}(\textcolor{keywordtype}{double});}
+\DoxyCodeLine{157     std::string \mbox{\hyperlink{class_cart_total_ae21578ae2f65c2bf65b48c578a6fc358}{getName}}();}
+\DoxyCodeLine{163     Wt::WPushButton *\mbox{\hyperlink{class_cart_total_a3c7673604f0f8f4f3f60d7d7e304de13}{getCheckoutPtr}}();}
+\DoxyCodeLine{168     \mbox{\hyperlink{class_cart_total_ad7cd3f3609452e5cc191250ffa50bd31}{\string~CartTotal}}();}
+\DoxyCodeLine{169 }
+\DoxyCodeLine{170    \textcolor{keyword}{private}:}
+\DoxyCodeLine{175     \textcolor{keywordtype}{void} \mbox{\hyperlink{class_cart_total_ad87aa60216f622522c1a07cbf3cb082b}{updateTotal}}();}
+\DoxyCodeLine{180     \textcolor{keywordtype}{double} \mbox{\hyperlink{class_cart_total_a347b090bb673823053218606cf642dac}{dtotal}};}
+\DoxyCodeLine{185     Wt::WText *\mbox{\hyperlink{class_cart_total_aca32d06f0cdb8db7e1de80a85ed0d504}{total\_}};}
+\DoxyCodeLine{190     Wt::WLineEdit *\mbox{\hyperlink{class_cart_total_a71697fd48dbdd8acafe7b9c0a4b206fd}{nameEdit\_}};}
+\DoxyCodeLine{195     Wt::WPushButton *\mbox{\hyperlink{class_cart_total_a04773a0ae47057e1627fc64462e0ec84}{checkoutButton\_}};}
+\DoxyCodeLine{196 \};}
+\DoxyCodeLine{197 }
+\DoxyCodeLine{198 \textcolor{preprocessor}{\#endif}}
 
 \end{DoxyCode}
