--- a/docs/latex/_menu_widgets_8hpp_source.tex
+++ b/docs/latex/_menu_widgets_8hpp_source.tex
@@ -28,31 +28,31 @@
 \DoxyCodeLine{24 }
 \DoxyCodeLine{25 \textcolor{keyword}{class }\mbox{\hyperlink{class_menu_item_widget}{MenuItemWidget}} : \textcolor{keyword}{public} Wt::WTemplate \{}
 \DoxyCodeLine{26    \textcolor{keyword}{public}:}
-\DoxyCodeLine{27     \mbox{\hyperlink{class_menu_item_widget}{MenuItemWidget}}(\textcolor{keyword}{const} std::string \&name, \textcolor{keyword}{const} \textcolor{keywordtype}{double} \&price, \textcolor{keyword}{const} std::string \&description);}
-\DoxyCodeLine{28     Wt::WPushButton *getCartPtr();}
-\DoxyCodeLine{29 }
-\DoxyCodeLine{30    \textcolor{keyword}{private}:}
-\DoxyCodeLine{31     Wt::WText *name\_;}
-\DoxyCodeLine{32     Wt::WText *price\_;}
-\DoxyCodeLine{33     Wt::WText *description\_;}
-\DoxyCodeLine{34     Wt::WPushButton *cartButton\_;}
-\DoxyCodeLine{35 \};}
-\DoxyCodeLine{36 }
-\DoxyCodeLine{37 \textcolor{keyword}{class }\mbox{\hyperlink{class_add_item_widget}{AddItemWidget}} : \textcolor{keyword}{public} Wt::WTemplate \{}
-\DoxyCodeLine{38    \textcolor{keyword}{public}:}
-\DoxyCodeLine{39     \mbox{\hyperlink{class_add_item_widget}{AddItemWidget}}();}
-\DoxyCodeLine{40     std::string getName();}
-\DoxyCodeLine{41     \textcolor{keywordtype}{double} getPrice();}
-\DoxyCodeLine{42     std::string getDescription();}
-\DoxyCodeLine{43     Wt::WPushButton *getAddItemPtr();}
-\DoxyCodeLine{44 }
-\DoxyCodeLine{45    \textcolor{keyword}{private}:}
-\DoxyCodeLine{46     Wt::WLineEdit *name\_;}
-\DoxyCodeLine{47     Wt::WLineEdit *price\_;}
-\DoxyCodeLine{48     Wt::WTextArea *description\_;}
-\DoxyCodeLine{49     Wt::WPushButton *addItemButton\_;}
-\DoxyCodeLine{50 \};}
-\DoxyCodeLine{51 }
-\DoxyCodeLine{52 \textcolor{preprocessor}{\#endif}}
+\DoxyCodeLine{34     \mbox{\hyperlink{class_menu_item_widget}{MenuItemWidget}}(\textcolor{keyword}{const} std::string \&name, \textcolor{keyword}{const} \textcolor{keywordtype}{double} \&price, \textcolor{keyword}{const} std::string \&description);}
+\DoxyCodeLine{40     Wt::WPushButton *\mbox{\hyperlink{class_menu_item_widget_a1aaff5359d1ae69a433c6b1c92c5de9c}{getCartPtr}}();}
+\DoxyCodeLine{41 }
+\DoxyCodeLine{42    \textcolor{keyword}{private}:}
+\DoxyCodeLine{47     Wt::WText *\mbox{\hyperlink{class_menu_item_widget_a7e68b00e34dee3ef8d0a768e36043e63}{name\_}};}
+\DoxyCodeLine{51     Wt::WText *\mbox{\hyperlink{class_menu_item_widget_af01b2ead3a136565c56a191d8eaec8b7}{price\_}};}
+\DoxyCodeLine{56     Wt::WText *\mbox{\hyperlink{class_menu_item_widget_a88a55e473de1be5b1ba0971728082ccc}{description\_}};}
+\DoxyCodeLine{61     Wt::WPushButton *\mbox{\hyperlink{class_menu_item_widget_a3d2ba63db97e1cc3824d5fe2cf844026}{cartButton\_}};}
+\DoxyCodeLine{62 \};}
+\DoxyCodeLine{63 }
+\DoxyCodeLine{64 \textcolor{keyword}{class }\mbox{\hyperlink{class_add_item_widget}{AddItemWidget}} : \textcolor{keyword}{public} Wt::WTemplate \{}
+\DoxyCodeLine{65    \textcolor{keyword}{public}:}
+\DoxyCodeLine{70     \mbox{\hyperlink{class_add_item_widget_a26efefaf36cfe7bf164dd6b203d07c7f}{AddItemWidget}}();}
+\DoxyCodeLine{76     std::string \mbox{\hyperlink{class_add_item_widget_ab3c3a600097ba4ae347fb735504d07de}{getName}}();}
+\DoxyCodeLine{82     \textcolor{keywordtype}{double} \mbox{\hyperlink{class_add_item_widget_aadcabe9efe07d78be2ced50da2d902f4}{getPrice}}();}
+\DoxyCodeLine{88     std::string \mbox{\hyperlink{class_add_item_widget_ae8031abedd3b084460975afb0354de31}{getDescription}}();}
+\DoxyCodeLine{94     Wt::WPushButton *\mbox{\hyperlink{class_add_item_widget_aa90bbb3dfd2b20150d33170d25e6734a}{getAddItemPtr}}();}
+\DoxyCodeLine{95 }
+\DoxyCodeLine{96    \textcolor{keyword}{private}:}
+\DoxyCodeLine{101     Wt::WLineEdit *\mbox{\hyperlink{class_add_item_widget_a40f52293b81f71a9e81b0af9fedb0afa}{name\_}};}
+\DoxyCodeLine{106     Wt::WLineEdit *\mbox{\hyperlink{class_add_item_widget_a054c82272f8e5e3107500eb6f46f5620}{price\_}};}
+\DoxyCodeLine{111     Wt::WTextArea *\mbox{\hyperlink{class_add_item_widget_aa3f1573c0aaf02d9cd7f5c65d265e941}{description\_}};}
+\DoxyCodeLine{116     Wt::WPushButton *\mbox{\hyperlink{class_add_item_widget_abf8b10e4a3f7f7a3b35e0db4389ea355}{addItemButton\_}};}
+\DoxyCodeLine{117 \};}
+\DoxyCodeLine{118 }
+\DoxyCodeLine{119 \textcolor{preprocessor}{\#endif}}
 
 \end{DoxyCode}
