--- a/docs/latex/annotated.tex
+++ b/docs/latex/annotated.tex
@@ -12,6 +12,7 @@ Here are the classes, structs, unions and interfaces with brief descriptions\+:\
 \item\contentsline{section}{\mbox{\hyperlink{class_d_b_helper}{DBHelper}} \\*Data access layer class }{\pageref{class_d_b_helper}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_home_page}{Home\+Page}} \\*Class representing the home page }{\pageref{class_home_page}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_inventory_item}{Inventory\+Item}} \\*Class that represents the inventory item }{\pageref{class_inventory_item}}{}
+\item\contentsline{section}{\mbox{\hyperlink{class_inventory_page}{Inventory\+Page}} }{\pageref{class_inventory_page}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_login_page}{Login\+Page}} \\*Class representing the login page }{\pageref{class_login_page}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_menu_item}{Menu\+Item}} \\*Class representing a row of the \mbox{\hyperlink{class_menu_item}{Menu\+Item}} table }{\pageref{class_menu_item}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_menu_item_ingredient}{Menu\+Item\+Ingredient}} \\*Row of the \mbox{\hyperlink{class_menu_item_ingredient}{Menu\+Item\+Ingredient}} table in the SQL database }{\pageref{class_menu_item_ingredient}}{}
