--- a/docs/latex/class_add_item_widget.tex
+++ b/docs/latex/class_add_item_widget.tex
@@ -9,33 +9,138 @@ Inheritance diagram for Add\+Item\+Widget\+:\begin{figure}[H]
 \doxysubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{class_add_item_widget_ab3c3a600097ba4ae347fb735504d07de}\label{class_add_item_widget_ab3c3a600097ba4ae347fb735504d07de}} 
-std\+::string {\bfseries get\+Name} ()
-\item 
-\mbox{\Hypertarget{class_add_item_widget_aadcabe9efe07d78be2ced50da2d902f4}\label{class_add_item_widget_aadcabe9efe07d78be2ced50da2d902f4}} 
-double {\bfseries get\+Price} ()
-\item 
-\mbox{\Hypertarget{class_add_item_widget_ae8031abedd3b084460975afb0354de31}\label{class_add_item_widget_ae8031abedd3b084460975afb0354de31}} 
-std\+::string {\bfseries get\+Description} ()
-\item 
-\mbox{\Hypertarget{class_add_item_widget_aa90bbb3dfd2b20150d33170d25e6734a}\label{class_add_item_widget_aa90bbb3dfd2b20150d33170d25e6734a}} 
-Wt\+::\+WPush\+Button $\ast$ {\bfseries get\+Add\+Item\+Ptr} ()
-\end{DoxyCompactItemize}
+\mbox{\hyperlink{class_add_item_widget_a26efefaf36cfe7bf164dd6b203d07c7f}{Add\+Item\+Widget}} ()
+\begin{DoxyCompactList}\small\item\em Construct a new Add Item Widget object. \end{DoxyCompactList}\item 
+std\+::string \mbox{\hyperlink{class_add_item_widget_ab3c3a600097ba4ae347fb735504d07de}{get\+Name}} ()
+\begin{DoxyCompactList}\small\item\em Get the Name of the menu item. \end{DoxyCompactList}\item 
+double \mbox{\hyperlink{class_add_item_widget_aadcabe9efe07d78be2ced50da2d902f4}{get\+Price}} ()
+\begin{DoxyCompactList}\small\item\em Get the Price of the menu item. \end{DoxyCompactList}\item 
+std\+::string \mbox{\hyperlink{class_add_item_widget_ae8031abedd3b084460975afb0354de31}{get\+Description}} ()
+\begin{DoxyCompactList}\small\item\em Get the Description of the menu item. \end{DoxyCompactList}\item 
+Wt\+::\+WPush\+Button $\ast$ \mbox{\hyperlink{class_add_item_widget_aa90bbb3dfd2b20150d33170d25e6734a}{get\+Add\+Item\+Ptr}} ()
+\begin{DoxyCompactList}\small\item\em Get the pointer to the add item push button. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Private Attributes}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{class_add_item_widget_a40f52293b81f71a9e81b0af9fedb0afa}\label{class_add_item_widget_a40f52293b81f71a9e81b0af9fedb0afa}} 
-Wt\+::\+WLine\+Edit $\ast$ {\bfseries name\+\_\+}
-\item 
-\mbox{\Hypertarget{class_add_item_widget_a054c82272f8e5e3107500eb6f46f5620}\label{class_add_item_widget_a054c82272f8e5e3107500eb6f46f5620}} 
-Wt\+::\+WLine\+Edit $\ast$ {\bfseries price\+\_\+}
-\item 
-\mbox{\Hypertarget{class_add_item_widget_aa3f1573c0aaf02d9cd7f5c65d265e941}\label{class_add_item_widget_aa3f1573c0aaf02d9cd7f5c65d265e941}} 
-Wt\+::\+WText\+Area $\ast$ {\bfseries description\+\_\+}
-\item 
+Wt\+::\+WLine\+Edit $\ast$ \mbox{\hyperlink{class_add_item_widget_a40f52293b81f71a9e81b0af9fedb0afa}{name\+\_\+}}
+\begin{DoxyCompactList}\small\item\em Field widget for inputting menu item name. \end{DoxyCompactList}\item 
+Wt\+::\+WLine\+Edit $\ast$ \mbox{\hyperlink{class_add_item_widget_a054c82272f8e5e3107500eb6f46f5620}{price\+\_\+}}
+\begin{DoxyCompactList}\small\item\em Field widget for inputting menu item price. \end{DoxyCompactList}\item 
+Wt\+::\+WText\+Area $\ast$ \mbox{\hyperlink{class_add_item_widget_aa3f1573c0aaf02d9cd7f5c65d265e941}{description\+\_\+}}
+\begin{DoxyCompactList}\small\item\em Field widget for inputting menu item description. \end{DoxyCompactList}\item 
+Wt\+::\+WPush\+Button $\ast$ \mbox{\hyperlink{class_add_item_widget_abf8b10e4a3f7f7a3b35e0db4389ea355}{add\+Item\+Button\+\_\+}}
+\begin{DoxyCompactList}\small\item\em Button to add item to database. \end{DoxyCompactList}\end{DoxyCompactItemize}
+
+
+\doxysubsection{Constructor \& Destructor Documentation}
+\mbox{\Hypertarget{class_add_item_widget_a26efefaf36cfe7bf164dd6b203d07c7f}\label{class_add_item_widget_a26efefaf36cfe7bf164dd6b203d07c7f}} 
+\index{AddItemWidget@{AddItemWidget}!AddItemWidget@{AddItemWidget}}
+\index{AddItemWidget@{AddItemWidget}!AddItemWidget@{AddItemWidget}}
+\doxysubsubsection{\texorpdfstring{AddItemWidget()}{AddItemWidget()}}
+{\footnotesize\ttfamily Add\+Item\+Widget\+::\+Add\+Item\+Widget (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+
+
+Construct a new Add Item Widget object. 
+
+
+
+\doxysubsection{Member Function Documentation}
+\mbox{\Hypertarget{class_add_item_widget_aa90bbb3dfd2b20150d33170d25e6734a}\label{class_add_item_widget_aa90bbb3dfd2b20150d33170d25e6734a}} 
+\index{AddItemWidget@{AddItemWidget}!getAddItemPtr@{getAddItemPtr}}
+\index{getAddItemPtr@{getAddItemPtr}!AddItemWidget@{AddItemWidget}}
+\doxysubsubsection{\texorpdfstring{getAddItemPtr()}{getAddItemPtr()}}
+{\footnotesize\ttfamily Wt\+::\+WPush\+Button $\ast$ Add\+Item\+Widget\+::get\+Add\+Item\+Ptr (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+
+
+Get the pointer to the add item push button. 
+
+\begin{DoxyReturn}{Returns}
+Wt\+::\+WPush\+Button$\ast$ 
+\end{DoxyReturn}
+\mbox{\Hypertarget{class_add_item_widget_ae8031abedd3b084460975afb0354de31}\label{class_add_item_widget_ae8031abedd3b084460975afb0354de31}} 
+\index{AddItemWidget@{AddItemWidget}!getDescription@{getDescription}}
+\index{getDescription@{getDescription}!AddItemWidget@{AddItemWidget}}
+\doxysubsubsection{\texorpdfstring{getDescription()}{getDescription()}}
+{\footnotesize\ttfamily std\+::string Add\+Item\+Widget\+::get\+Description (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+
+
+Get the Description of the menu item. 
+
+\begin{DoxyReturn}{Returns}
+std\+::string 
+\end{DoxyReturn}
+\mbox{\Hypertarget{class_add_item_widget_ab3c3a600097ba4ae347fb735504d07de}\label{class_add_item_widget_ab3c3a600097ba4ae347fb735504d07de}} 
+\index{AddItemWidget@{AddItemWidget}!getName@{getName}}
+\index{getName@{getName}!AddItemWidget@{AddItemWidget}}
+\doxysubsubsection{\texorpdfstring{getName()}{getName()}}
+{\footnotesize\ttfamily std\+::string Add\+Item\+Widget\+::get\+Name (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+
+
+Get the Name of the menu item. 
+
+\begin{DoxyReturn}{Returns}
+std\+::string 
+\end{DoxyReturn}
+\mbox{\Hypertarget{class_add_item_widget_aadcabe9efe07d78be2ced50da2d902f4}\label{class_add_item_widget_aadcabe9efe07d78be2ced50da2d902f4}} 
+\index{AddItemWidget@{AddItemWidget}!getPrice@{getPrice}}
+\index{getPrice@{getPrice}!AddItemWidget@{AddItemWidget}}
+\doxysubsubsection{\texorpdfstring{getPrice()}{getPrice()}}
+{\footnotesize\ttfamily double Add\+Item\+Widget\+::get\+Price (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+
+
+Get the Price of the menu item. 
+
+\begin{DoxyReturn}{Returns}
+double 
+\end{DoxyReturn}
+
+
+\doxysubsection{Member Data Documentation}
 \mbox{\Hypertarget{class_add_item_widget_abf8b10e4a3f7f7a3b35e0db4389ea355}\label{class_add_item_widget_abf8b10e4a3f7f7a3b35e0db4389ea355}} 
-Wt\+::\+WPush\+Button $\ast$ {\bfseries add\+Item\+Button\+\_\+}
-\end{DoxyCompactItemize}
+\index{AddItemWidget@{AddItemWidget}!addItemButton\_@{addItemButton\_}}
+\index{addItemButton\_@{addItemButton\_}!AddItemWidget@{AddItemWidget}}
+\doxysubsubsection{\texorpdfstring{addItemButton\_}{addItemButton\_}}
+{\footnotesize\ttfamily Wt\+::\+WPush\+Button$\ast$ Add\+Item\+Widget\+::add\+Item\+Button\+\_\+\hspace{0.3cm}{\ttfamily [private]}}
+
+
+
+Button to add item to database. 
+
+\mbox{\Hypertarget{class_add_item_widget_aa3f1573c0aaf02d9cd7f5c65d265e941}\label{class_add_item_widget_aa3f1573c0aaf02d9cd7f5c65d265e941}} 
+\index{AddItemWidget@{AddItemWidget}!description\_@{description\_}}
+\index{description\_@{description\_}!AddItemWidget@{AddItemWidget}}
+\doxysubsubsection{\texorpdfstring{description\_}{description\_}}
+{\footnotesize\ttfamily Wt\+::\+WText\+Area$\ast$ Add\+Item\+Widget\+::description\+\_\+\hspace{0.3cm}{\ttfamily [private]}}
+
+
+
+Field widget for inputting menu item description. 
+
+\mbox{\Hypertarget{class_add_item_widget_a40f52293b81f71a9e81b0af9fedb0afa}\label{class_add_item_widget_a40f52293b81f71a9e81b0af9fedb0afa}} 
+\index{AddItemWidget@{AddItemWidget}!name\_@{name\_}}
+\index{name\_@{name\_}!AddItemWidget@{AddItemWidget}}
+\doxysubsubsection{\texorpdfstring{name\_}{name\_}}
+{\footnotesize\ttfamily Wt\+::\+WLine\+Edit$\ast$ Add\+Item\+Widget\+::name\+\_\+\hspace{0.3cm}{\ttfamily [private]}}
+
+
+
+Field widget for inputting menu item name. 
+
+\mbox{\Hypertarget{class_add_item_widget_a054c82272f8e5e3107500eb6f46f5620}\label{class_add_item_widget_a054c82272f8e5e3107500eb6f46f5620}} 
+\index{AddItemWidget@{AddItemWidget}!price\_@{price\_}}
+\index{price\_@{price\_}!AddItemWidget@{AddItemWidget}}
+\doxysubsubsection{\texorpdfstring{price\_}{price\_}}
+{\footnotesize\ttfamily Wt\+::\+WLine\+Edit$\ast$ Add\+Item\+Widget\+::price\+\_\+\hspace{0.3cm}{\ttfamily [private]}}
+
+
+
+Field widget for inputting menu item price. 
+
 
 
 The documentation for this class was generated from the following files\+:\begin{DoxyCompactItemize}
