--- a/docs/latex/class_cart_widget.tex
+++ b/docs/latex/class_cart_widget.tex
@@ -23,48 +23,35 @@ Wt\+::\+WPush\+Button $\ast$ \mbox{\hyperlink{class_cart_widget_a86d4f65c55304bd
 \begin{DoxyCompactList}\small\item\em Get the Subtract Ptr object. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{class_cart_widget_a38211cb0ff9ed8da8aaad0a42ed4d83a}{$\sim$\+Cart\+Widget}} ()
 \begin{DoxyCompactList}\small\item\em Destroy the Cart Widget object. \end{DoxyCompactList}\item 
-\mbox{\Hypertarget{class_cart_widget_ac14f95c1237caf9ae1bf96be3e5af14e}\label{class_cart_widget_ac14f95c1237caf9ae1bf96be3e5af14e}} 
-int {\bfseries get\+Quantity} ()
-\item 
-\mbox{\Hypertarget{class_cart_widget_ac537b00b7a0e1a92bdaab3ec784e17e6}\label{class_cart_widget_ac537b00b7a0e1a92bdaab3ec784e17e6}} 
-double {\bfseries get\+Total} ()
-\item 
-\mbox{\Hypertarget{class_cart_widget_a4f261efd2e94df7db9baea1a77ca1f71}\label{class_cart_widget_a4f261efd2e94df7db9baea1a77ca1f71}} 
-double {\bfseries get\+Price} ()
-\end{DoxyCompactItemize}
+int \mbox{\hyperlink{class_cart_widget_ac14f95c1237caf9ae1bf96be3e5af14e}{get\+Quantity}} ()
+\begin{DoxyCompactList}\small\item\em Get the quantity of items. \end{DoxyCompactList}\item 
+double \mbox{\hyperlink{class_cart_widget_ac537b00b7a0e1a92bdaab3ec784e17e6}{get\+Total}} ()
+\begin{DoxyCompactList}\small\item\em Get total price. \end{DoxyCompactList}\item 
+double \mbox{\hyperlink{class_cart_widget_a4f261efd2e94df7db9baea1a77ca1f71}{get\+Price}} ()
+\begin{DoxyCompactList}\small\item\em Get the price of a single item. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Private Attributes}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{class_cart_widget_abdd093b5f9e340a40dd7db8ed3f355ce}\label{class_cart_widget_abdd093b5f9e340a40dd7db8ed3f355ce}} 
-int {\bfseries iquantity}
-\item 
-\mbox{\Hypertarget{class_cart_widget_ae4692a9e4b467c231a8387425654fea2}\label{class_cart_widget_ae4692a9e4b467c231a8387425654fea2}} 
-double {\bfseries dtotal}
-\item 
-\mbox{\Hypertarget{class_cart_widget_a48a823fa5183eb9ee7ad0d79d43c2fa7}\label{class_cart_widget_a48a823fa5183eb9ee7ad0d79d43c2fa7}} 
-double {\bfseries dprice}
-\item 
-\mbox{\Hypertarget{class_cart_widget_ac301161469d87284a556fe89fe8ff5f1}\label{class_cart_widget_ac301161469d87284a556fe89fe8ff5f1}} 
-Wt\+::\+WText $\ast$ {\bfseries name\+\_\+}
-\item 
-\mbox{\Hypertarget{class_cart_widget_a8a347b52067c0f3a37eae4cb275c58a0}\label{class_cart_widget_a8a347b52067c0f3a37eae4cb275c58a0}} 
-Wt\+::\+WText $\ast$ {\bfseries price\+\_\+}
-\item 
-\mbox{\Hypertarget{class_cart_widget_af0c983f543869805b5799ebb9489a17a}\label{class_cart_widget_af0c983f543869805b5799ebb9489a17a}} 
-Wt\+::\+WText $\ast$ {\bfseries quantity\+\_\+}
-\item 
-\mbox{\Hypertarget{class_cart_widget_acce3689aaff150d85edaf72620e287e9}\label{class_cart_widget_acce3689aaff150d85edaf72620e287e9}} 
-Wt\+::\+WPush\+Button $\ast$ {\bfseries remove\+Button\+\_\+}
-\item 
-\mbox{\Hypertarget{class_cart_widget_a4846fd54fe8cf3d365c0f6546be92c4e}\label{class_cart_widget_a4846fd54fe8cf3d365c0f6546be92c4e}} 
-Wt\+::\+WPush\+Button $\ast$ {\bfseries add\+Button\+\_\+}
-\item 
-\mbox{\Hypertarget{class_cart_widget_a501e136b16126fd64ee48f286c4e53d2}\label{class_cart_widget_a501e136b16126fd64ee48f286c4e53d2}} 
-Wt\+::\+WPush\+Button $\ast$ {\bfseries subtract\+Button\+\_\+}
-\item 
-\mbox{\Hypertarget{class_cart_widget_aa01f3143a70b936e41a58e1d8757b958}\label{class_cart_widget_aa01f3143a70b936e41a58e1d8757b958}} 
-Wt\+::\+WText $\ast$ {\bfseries total\+\_\+}
-\end{DoxyCompactItemize}
+int \mbox{\hyperlink{class_cart_widget_abdd093b5f9e340a40dd7db8ed3f355ce}{iquantity}}
+\begin{DoxyCompactList}\small\item\em integer representation of quantity of an item \end{DoxyCompactList}\item 
+double \mbox{\hyperlink{class_cart_widget_ae4692a9e4b467c231a8387425654fea2}{dtotal}}
+\begin{DoxyCompactList}\small\item\em double representation of total price of items \end{DoxyCompactList}\item 
+double \mbox{\hyperlink{class_cart_widget_a48a823fa5183eb9ee7ad0d79d43c2fa7}{dprice}}
+\begin{DoxyCompactList}\small\item\em double representation of price of an item \end{DoxyCompactList}\item 
+Wt\+::\+WText $\ast$ \mbox{\hyperlink{class_cart_widget_ac301161469d87284a556fe89fe8ff5f1}{name\+\_\+}}
+\begin{DoxyCompactList}\small\item\em WText name widget. \end{DoxyCompactList}\item 
+Wt\+::\+WText $\ast$ \mbox{\hyperlink{class_cart_widget_a8a347b52067c0f3a37eae4cb275c58a0}{price\+\_\+}}
+\begin{DoxyCompactList}\small\item\em WText price widget. \end{DoxyCompactList}\item 
+Wt\+::\+WText $\ast$ \mbox{\hyperlink{class_cart_widget_af0c983f543869805b5799ebb9489a17a}{quantity\+\_\+}}
+\begin{DoxyCompactList}\small\item\em WText quantity widget. The quantity of an item in the cart. \end{DoxyCompactList}\item 
+Wt\+::\+WPush\+Button $\ast$ \mbox{\hyperlink{class_cart_widget_acce3689aaff150d85edaf72620e287e9}{remove\+Button\+\_\+}}
+\begin{DoxyCompactList}\small\item\em WPush\+Button, remove button removes item from cart. \end{DoxyCompactList}\item 
+Wt\+::\+WPush\+Button $\ast$ \mbox{\hyperlink{class_cart_widget_a4846fd54fe8cf3d365c0f6546be92c4e}{add\+Button\+\_\+}}
+\begin{DoxyCompactList}\small\item\em WPush\+Button, add button adds additional item to cart. \end{DoxyCompactList}\item 
+Wt\+::\+WPush\+Button $\ast$ \mbox{\hyperlink{class_cart_widget_a501e136b16126fd64ee48f286c4e53d2}{subtract\+Button\+\_\+}}
+\begin{DoxyCompactList}\small\item\em WPush\+Button, subtract button subtracts an item from cart. \end{DoxyCompactList}\item 
+Wt\+::\+WText $\ast$ \mbox{\hyperlink{class_cart_widget_aa01f3143a70b936e41a58e1d8757b958}{total\+\_\+}}
+\begin{DoxyCompactList}\small\item\em WText total widget. The total price of the current item(s) in the cart. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \doxysubsection{Constructor \& Destructor Documentation}
@@ -104,6 +91,32 @@ Get the Add Ptr object.
 \begin{DoxyReturn}{Returns}
 Wt\+::\+WPush\+Button$\ast$ 
 \end{DoxyReturn}
+\mbox{\Hypertarget{class_cart_widget_a4f261efd2e94df7db9baea1a77ca1f71}\label{class_cart_widget_a4f261efd2e94df7db9baea1a77ca1f71}} 
+\index{CartWidget@{CartWidget}!getPrice@{getPrice}}
+\index{getPrice@{getPrice}!CartWidget@{CartWidget}}
+\doxysubsubsection{\texorpdfstring{getPrice()}{getPrice()}}
+{\footnotesize\ttfamily double Cart\+Widget\+::get\+Price (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+
+
+Get the price of a single item. 
+
+\begin{DoxyReturn}{Returns}
+double 
+\end{DoxyReturn}
+\mbox{\Hypertarget{class_cart_widget_ac14f95c1237caf9ae1bf96be3e5af14e}\label{class_cart_widget_ac14f95c1237caf9ae1bf96be3e5af14e}} 
+\index{CartWidget@{CartWidget}!getQuantity@{getQuantity}}
+\index{getQuantity@{getQuantity}!CartWidget@{CartWidget}}
+\doxysubsubsection{\texorpdfstring{getQuantity()}{getQuantity()}}
+{\footnotesize\ttfamily int Cart\+Widget\+::get\+Quantity (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+
+
+Get the quantity of items. 
+
+\begin{DoxyReturn}{Returns}
+int 
+\end{DoxyReturn}
 \mbox{\Hypertarget{class_cart_widget_acb236d5cc4a33a1ebc4df3e5babf2098}\label{class_cart_widget_acb236d5cc4a33a1ebc4df3e5babf2098}} 
 \index{CartWidget@{CartWidget}!getRemovePtr@{getRemovePtr}}
 \index{getRemovePtr@{getRemovePtr}!CartWidget@{CartWidget}}
@@ -130,6 +143,19 @@ Get the Subtract Ptr object.
 \begin{DoxyReturn}{Returns}
 Wt\+::\+WPush\+Button$\ast$ 
 \end{DoxyReturn}
+\mbox{\Hypertarget{class_cart_widget_ac537b00b7a0e1a92bdaab3ec784e17e6}\label{class_cart_widget_ac537b00b7a0e1a92bdaab3ec784e17e6}} 
+\index{CartWidget@{CartWidget}!getTotal@{getTotal}}
+\index{getTotal@{getTotal}!CartWidget@{CartWidget}}
+\doxysubsubsection{\texorpdfstring{getTotal()}{getTotal()}}
+{\footnotesize\ttfamily double Cart\+Widget\+::get\+Total (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+
+
+Get total price. 
+
+\begin{DoxyReturn}{Returns}
+double 
+\end{DoxyReturn}
 \mbox{\Hypertarget{class_cart_widget_a2fe6c4147fab62d5e1671b446a48f041}\label{class_cart_widget_a2fe6c4147fab62d5e1671b446a48f041}} 
 \index{CartWidget@{CartWidget}!updateQuantity@{updateQuantity}}
 \index{updateQuantity@{updateQuantity}!CartWidget@{CartWidget}}
@@ -149,6 +175,109 @@ update the quantity of the item
 
 
 update the total price of the item 
+
+
+
+\doxysubsection{Member Data Documentation}
+\mbox{\Hypertarget{class_cart_widget_a4846fd54fe8cf3d365c0f6546be92c4e}\label{class_cart_widget_a4846fd54fe8cf3d365c0f6546be92c4e}} 
+\index{CartWidget@{CartWidget}!addButton\_@{addButton\_}}
+\index{addButton\_@{addButton\_}!CartWidget@{CartWidget}}
+\doxysubsubsection{\texorpdfstring{addButton\_}{addButton\_}}
+{\footnotesize\ttfamily Wt\+::\+WPush\+Button$\ast$ Cart\+Widget\+::add\+Button\+\_\+\hspace{0.3cm}{\ttfamily [private]}}
+
+
+
+WPush\+Button, add button adds additional item to cart. 
+
+\mbox{\Hypertarget{class_cart_widget_a48a823fa5183eb9ee7ad0d79d43c2fa7}\label{class_cart_widget_a48a823fa5183eb9ee7ad0d79d43c2fa7}} 
+\index{CartWidget@{CartWidget}!dprice@{dprice}}
+\index{dprice@{dprice}!CartWidget@{CartWidget}}
+\doxysubsubsection{\texorpdfstring{dprice}{dprice}}
+{\footnotesize\ttfamily double Cart\+Widget\+::dprice\hspace{0.3cm}{\ttfamily [private]}}
+
+
+
+double representation of price of an item 
+
+\mbox{\Hypertarget{class_cart_widget_ae4692a9e4b467c231a8387425654fea2}\label{class_cart_widget_ae4692a9e4b467c231a8387425654fea2}} 
+\index{CartWidget@{CartWidget}!dtotal@{dtotal}}
+\index{dtotal@{dtotal}!CartWidget@{CartWidget}}
+\doxysubsubsection{\texorpdfstring{dtotal}{dtotal}}
+{\footnotesize\ttfamily double Cart\+Widget\+::dtotal\hspace{0.3cm}{\ttfamily [private]}}
+
+
+
+double representation of total price of items 
+
+\mbox{\Hypertarget{class_cart_widget_abdd093b5f9e340a40dd7db8ed3f355ce}\label{class_cart_widget_abdd093b5f9e340a40dd7db8ed3f355ce}} 
+\index{CartWidget@{CartWidget}!iquantity@{iquantity}}
+\index{iquantity@{iquantity}!CartWidget@{CartWidget}}
+\doxysubsubsection{\texorpdfstring{iquantity}{iquantity}}
+{\footnotesize\ttfamily int Cart\+Widget\+::iquantity\hspace{0.3cm}{\ttfamily [private]}}
+
+
+
+integer representation of quantity of an item 
+
+\mbox{\Hypertarget{class_cart_widget_ac301161469d87284a556fe89fe8ff5f1}\label{class_cart_widget_ac301161469d87284a556fe89fe8ff5f1}} 
+\index{CartWidget@{CartWidget}!name\_@{name\_}}
+\index{name\_@{name\_}!CartWidget@{CartWidget}}
+\doxysubsubsection{\texorpdfstring{name\_}{name\_}}
+{\footnotesize\ttfamily Wt\+::\+WText$\ast$ Cart\+Widget\+::name\+\_\+\hspace{0.3cm}{\ttfamily [private]}}
+
+
+
+WText name widget. 
+
+\mbox{\Hypertarget{class_cart_widget_a8a347b52067c0f3a37eae4cb275c58a0}\label{class_cart_widget_a8a347b52067c0f3a37eae4cb275c58a0}} 
+\index{CartWidget@{CartWidget}!price\_@{price\_}}
+\index{price\_@{price\_}!CartWidget@{CartWidget}}
+\doxysubsubsection{\texorpdfstring{price\_}{price\_}}
+{\footnotesize\ttfamily Wt\+::\+WText$\ast$ Cart\+Widget\+::price\+\_\+\hspace{0.3cm}{\ttfamily [private]}}
+
+
+
+WText price widget. 
+
+\mbox{\Hypertarget{class_cart_widget_af0c983f543869805b5799ebb9489a17a}\label{class_cart_widget_af0c983f543869805b5799ebb9489a17a}} 
+\index{CartWidget@{CartWidget}!quantity\_@{quantity\_}}
+\index{quantity\_@{quantity\_}!CartWidget@{CartWidget}}
+\doxysubsubsection{\texorpdfstring{quantity\_}{quantity\_}}
+{\footnotesize\ttfamily Wt\+::\+WText$\ast$ Cart\+Widget\+::quantity\+\_\+\hspace{0.3cm}{\ttfamily [private]}}
+
+
+
+WText quantity widget. The quantity of an item in the cart. 
+
+\mbox{\Hypertarget{class_cart_widget_acce3689aaff150d85edaf72620e287e9}\label{class_cart_widget_acce3689aaff150d85edaf72620e287e9}} 
+\index{CartWidget@{CartWidget}!removeButton\_@{removeButton\_}}
+\index{removeButton\_@{removeButton\_}!CartWidget@{CartWidget}}
+\doxysubsubsection{\texorpdfstring{removeButton\_}{removeButton\_}}
+{\footnotesize\ttfamily Wt\+::\+WPush\+Button$\ast$ Cart\+Widget\+::remove\+Button\+\_\+\hspace{0.3cm}{\ttfamily [private]}}
+
+
+
+WPush\+Button, remove button removes item from cart. 
+
+\mbox{\Hypertarget{class_cart_widget_a501e136b16126fd64ee48f286c4e53d2}\label{class_cart_widget_a501e136b16126fd64ee48f286c4e53d2}} 
+\index{CartWidget@{CartWidget}!subtractButton\_@{subtractButton\_}}
+\index{subtractButton\_@{subtractButton\_}!CartWidget@{CartWidget}}
+\doxysubsubsection{\texorpdfstring{subtractButton\_}{subtractButton\_}}
+{\footnotesize\ttfamily Wt\+::\+WPush\+Button$\ast$ Cart\+Widget\+::subtract\+Button\+\_\+\hspace{0.3cm}{\ttfamily [private]}}
+
+
+
+WPush\+Button, subtract button subtracts an item from cart. 
+
+\mbox{\Hypertarget{class_cart_widget_aa01f3143a70b936e41a58e1d8757b958}\label{class_cart_widget_aa01f3143a70b936e41a58e1d8757b958}} 
+\index{CartWidget@{CartWidget}!total\_@{total\_}}
+\index{total\_@{total\_}!CartWidget@{CartWidget}}
+\doxysubsubsection{\texorpdfstring{total\_}{total\_}}
+{\footnotesize\ttfamily Wt\+::\+WText$\ast$ Cart\+Widget\+::total\+\_\+\hspace{0.3cm}{\ttfamily [private]}}
+
+
+
+WText total widget. The total price of the current item(s) in the cart. 
 
 
 
