--- a/docs/latex/hierarchy.tex
+++ b/docs/latex/hierarchy.tex
@@ -19,6 +19,7 @@ This inheritance list is sorted roughly, but not completely, alphabetically\+:\b
 \end{DoxyCompactList}
 \item Wt\+::WContainer\+Widget\begin{DoxyCompactList}
 \item \contentsline{section}{Cart\+Page}{\pageref{class_cart_page}}{}
+\item \contentsline{section}{Inventory\+Page}{\pageref{class_inventory_page}}{}
 \item \contentsline{section}{Menu\+Page}{\pageref{class_menu_page}}{}
 \item \contentsline{section}{Navbar\+Widget}{\pageref{class_navbar_widget}}{}
 \item \contentsline{section}{Page}{\pageref{class_page}}{}
