--- a/docs/latex/refman.tex
+++ b/docs/latex/refman.tex
@@ -194,6 +194,7 @@
 \input{class_d_b_helper}
 \input{class_home_page}
 \input{class_inventory_item}
+\input{class_inventory_page}
 \input{class_login_page}
 \input{class_menu_item}
 \input{class_menu_item_ingredient}
@@ -228,6 +229,7 @@
 \input{_create_admin_page_8hpp_source}
 \input{_custom_loading_indicator_8hpp_source}
 \input{_home_page_8hpp_source}
+\input{_inventory_page_8hpp_source}
 \input{_login_page_8hpp_source}
 \input{_menu_page_8hpp_source}
 \input{_menu_widgets_8hpp_source}
