--- a/docs/latex/files.tex
+++ b/docs/latex/files.tex
@@ -18,6 +18,7 @@ Here is a list of all documented files with brief descriptions\+:\begin{DoxyComp
 \item\contentsline{section}{src/web/\mbox{\hyperlink{_create_admin_page_8hpp_source}{Create\+Admin\+Page.\+hpp}} }{\pageref{_create_admin_page_8hpp_source}}{}
 \item\contentsline{section}{src/web/\mbox{\hyperlink{_custom_loading_indicator_8hpp_source}{Custom\+Loading\+Indicator.\+hpp}} }{\pageref{_custom_loading_indicator_8hpp_source}}{}
 \item\contentsline{section}{src/web/\mbox{\hyperlink{_home_page_8hpp_source}{Home\+Page.\+hpp}} }{\pageref{_home_page_8hpp_source}}{}
+\item\contentsline{section}{src/web/\mbox{\hyperlink{_inventory_page_8hpp_source}{Inventory\+Page.\+hpp}} }{\pageref{_inventory_page_8hpp_source}}{}
 \item\contentsline{section}{src/web/\mbox{\hyperlink{_login_page_8hpp_source}{Login\+Page.\+hpp}} }{\pageref{_login_page_8hpp_source}}{}
 \item\contentsline{section}{src/web/\mbox{\hyperlink{_menu_page_8hpp_source}{Menu\+Page.\+hpp}} }{\pageref{_menu_page_8hpp_source}}{}
 \item\contentsline{section}{src/web/\mbox{\hyperlink{_menu_widgets_8hpp_source}{Menu\+Widgets.\+hpp}} }{\pageref{_menu_widgets_8hpp_source}}{}
